Fix content alignment

--- a/src/style/partials/_curriculum.scss
+++ b/src/style/partials/_curriculum.scss
@@ -1,3 +1,3 @@
-curriculum {
+.curriculum {
 	text-align: left;
 }
